compil.err
-- The CXX compiler identification is GNU 13.3.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found OpenMP_CXX: -fopenmp (found version "4.5") 
-- Found OpenMP: TRUE (found version "4.5")  
-- Found GLEW: /usr/include (found version "2.2.0") 
CMake Warning (dev) at /usr/share/cmake-3.28/Modules/FindOpenGL.cmake:381 (message):
  Policy CMP0072 is not set: FindOpenGL prefers GLVND by default when
  available.  Run "cmake --help-policy CMP0072" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  FindOpenGL found both a legacy GL library:

    OPENGL_gl_LIBRARY: /usr/lib/x86_64-linux-gnu/libGL.so

  and GLVND libraries for OpenGL and GLX:

    OPENGL_opengl_LIBRARY: /usr/lib/x86_64-linux-gnu/libOpenGL.so
    OPENGL_glx_LIBRARY: /usr/lib/x86_64-linux-gnu/libGLX.so

  OpenGL_GL_PREFERENCE has not been set to "GLVND" or "LEGACY", so for
  compatibility with CMake 3.10 and below the legacy GL library will be used.
Call Stack (most recent call first):
  CMakeLists.txt:22 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Found OpenGL: /usr/lib/x86_64-linux-gnu/libOpenGL.so   
-- YGL Configuration:
--   C++ Standard: 17
--   OpenMP: -fopenmp
--   GLEW Found: TRUE
--   GLFW3 Found: 1
--   OpenGL Found: TRUE
--   GLEW Include: /usr/include
--   GLFW3 Include: 
--   OpenGL Include: 
-- Configuring done (0.8s)
-- Generating done (0.0s)
-- Build files have been written to: /home/yannoo/Dev/YGL/build
[  2%] Building CXX object CMakeFiles/ygl.dir/src/core/bounding_box.cpp.o
[  5%] Building CXX object CMakeFiles/ygl.dir/src/core/light.cpp.o
[  8%] Building CXX object CMakeFiles/ygl.dir/src/core/camera.cpp.o
[ 11%] Building CXX object CMakeFiles/ygl.dir/src/core/mesh.cpp.o
[ 14%] Building CXX object CMakeFiles/ygl.dir/src/core/object3d.cpp.o
[ 17%] Building CXX object CMakeFiles/ygl.dir/src/core/scene.cpp.o
[ 20%] Building CXX object CMakeFiles/ygl.dir/src/loaders/loader.cpp.o
[ 22%] Building CXX object CMakeFiles/ygl.dir/src/loaders/md2_loader.cpp.o
/home/yannoo/Dev/YGL/src/core/object3d.cpp: In member function ‘void ygl::Object3D::updateWorldMatrix(bool) const’:
/home/yannoo/Dev/YGL/src/core/object3d.cpp:60:74: error: ‘class ygl::Vec3’ has no member named ‘Length’; did you mean ‘length’?
   60 |         Vec3(m_worldMatrix(0,0), m_worldMatrix(1,0), m_worldMatrix(2,0)).Length(),
      |                                                                          ^~~~~~
      |                                                                          length
/home/yannoo/Dev/YGL/src/core/object3d.cpp:61:74: error: ‘class ygl::Vec3’ has no member named ‘Length’; did you mean ‘length’?
   61 |         Vec3(m_worldMatrix(0,1), m_worldMatrix(1,1), m_worldMatrix(2,1)).Length(),
      |                                                                          ^~~~~~
      |                                                                          length
/home/yannoo/Dev/YGL/src/core/object3d.cpp:62:74: error: ‘class ygl::Vec3’ has no member named ‘Length’; did you mean ‘length’?
   62 |         Vec3(m_worldMatrix(0,2), m_worldMatrix(1,2), m_worldMatrix(2,2)).Length()
      |                                                                          ^~~~~~
      |                                                                          length
gmake[2]: *** [CMakeFiles/ygl.dir/build.make:132 : CMakeFiles/ygl.dir/src/core/object3d.cpp.o] Erreur 1
gmake[2]: *** Attente des tâches non terminées....
gmake[1]: *** [CMakeFiles/Makefile2:89 : CMakeFiles/ygl.dir/all] Erreur 2
gmake: *** [Makefile:91 : all] Erreur 2
